<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aktivnosti.DodajKvizAkt">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView6" android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/poz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spKategorije"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"/>

        <EditText
            android:id="@+id/etNaziv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/poljePretrage"
            android:layout_below="@+id/spKategorije"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dodana"
            android:textSize="20dp"
            android:layout_below="@+id/etNaziv"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerInParent="true"
            android:textColor="@color/dodana"/>


        <ba.unsa.etf.rma.NonScrollListView
            android:id="@+id/lvDodanaPitanja"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moguca"
            android:layout_below="@+id/lvDodanaPitanja"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerInParent="true"
            android:textColor="@color/moguca"/>


        <ba.unsa.etf.rma.NonScrollListView
            android:id="@+id/lvMogucaPitanja"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/btnDodajKviz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lvMogucaPitanja"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_centerInParent="true"
            android:textColor="@color/btn"
            android:background="@drawable/truebtn"
            android:text="@string/dodajKviz"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnImportKviz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnDodajKviz"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_centerInParent="true"
            android:textColor="@color/btn"
            android:background="@drawable/truebtn"
            android:text="@string/importKviz"
            android:textAllCaps="false"/>
    </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>